# Dindu-s-team---AMD-Track-2-submission

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.burner  README.md  SCRIPT_README.md  pyproject.toml  test_suite.txt
config/: pipeline.burner.yaml  pipeline.example.yaml  pipeline.yaml
credentials/: .env.example
input/: tasks.json  tasks2.json  test.json
src/: main.py
src/file_io/: __init__.py  api.py  download.py  drive_upload.py  input.py  output.py  show_output.py  upload_cli.py
src/important_frames/: api.py  detector.py
src/model_client/: __init__.py  api.py  bench.py  caption_generation.py  client.py  config.py  messages.py  response_parsing.py  types.py
src/model_client/prompts/: __init__.py  loader.py
src/model_client/prompts/caption_generation/: formal.md  humorous_non_tech.md  (+2 more)
src/pipeline_2/grid_extractor/: __init__.py  extractor.py  ffmpeg_reader.py
src/pipeline_2/important_frames/: __init__.py  api.py  detector.py  types.py
src/preprocessing/: api.py  bench.py  preprocessing.py  types.py
src/preprocessing/pruning_strat/: __init__.py  abs_diff.py  base.py
src/preprocessing/vlm_output/: __init__.py  grid.py
src/workflow/: async_pipeline.py  config.py
tests/: test_async_model_client.py  test_async_pipeline.py  test_file_io_show_output.py  test_model_client.py  test_model_client_bench.py  test_model_client_caption_generation.py  test_model_client_prompts.py  test_model_client_response_parsing.py  test_pipeline_config.py  test_preprocessing_bench.py  test_preprocessing_grid.py  test_preprocessing_sampling.py
(+4 files in other folders)
